--- a/src/main/java/view/PantallaLogin.fxml
+++ b/src/main/java/view/PantallaLogin.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -12,7 +13,7 @@
    <children>
       <VBox alignment="CENTER" prefHeight="1080.0" prefWidth="1920.0">
          <children>
-            <ImageView fitHeight="265.0" fitWidth="292.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgLoginLogo" fitHeight="265.0" fitWidth="292.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../resources/images/logo/logo.png" />
                </image>
@@ -27,9 +28,10 @@
                   <Font name="Corbel Light" size="24.0" />
                </font>
             </TextField>
+            <CheckBox fx:id="cbLoginRememberMe" mnemonicParsing="false" onAction="#cbRememberMeSelected" text="Recordar" />
             <Button fx:id="btnLoginEnter" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnLoginEnterPressed" prefHeight="40.0" prefWidth="240.0" style="-fx-border-radius: 12;" text="Entrar" />
             <Button fx:id="btnLoginRegister" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#btnLoginRegisterPressed" prefHeight="40.0" prefWidth="240.0" style="-fx-border-radius: 12;" text="Registrar" />
-            <Button fx:id="btnLoginWithGoogle" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#btnLoginWithGooglePressed" prefHeight="40.0" prefWidth="240.0" style="-fx-border-radius: 12;" text="Registrar" />
+            <Button fx:id="btnLoginWithGoogle" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#btnLoginWithGooglePressed" prefHeight="40.0" prefWidth="240.0" style="-fx-border-radius: 12;" text="Continuar con Google" />
          </children>
       </VBox>
    </children>
