--- a/src/main/java/view/PantallaRegistro.fxml
+++ b/src/main/java/view/PantallaRegistro.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PantallaLoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PantallaRegistroController">
    <children>
       <ImageView fx:id="imgLoginLogo" fitHeight="265.0" fitWidth="292.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -39,6 +39,6 @@
             <Font name="Corbel Light" size="24.0" />
          </font>
       </TextField>
-      <Button fx:id="btnLoginRegister" layoutX="955.0" layoutY="859.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#btnLoginRegisterPressed" prefHeight="40.0" prefWidth="240.0" style="-fx-border-radius: 12;" text="Crear nuevo usuario" />
+      <Button fx:id="btnLoginRegister" layoutX="955.0" layoutY="859.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#btnRegisterNewUserPressed" prefHeight="40.0" prefWidth="240.0" style="-fx-border-radius: 12;" text="Crear nuevo usuario" />
    </children>
 </AnchorPane>
