--- a/src/main/java/resources/css/application.css
+++ b/src/main/java/resources/css/application.css
@@ -1,4 +1,4 @@
-/* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
 .root{
 	-fx-font-family: "KronaOne-Regular";
+	src: url("/resources/fonts/KronaOne-Regular.ttf");
 }
