--- a/src/main/java/view/PantallaLogin.fxml
+++ b/src/main/java/view/PantallaLogin.fxml
@@ -14,69 +14,59 @@
 <?import javafx.scene.text.Font?>
 
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PantallaLoginController">
-   <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-   </rowConstraints>
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="982.0" minWidth="1512.0" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PantallaLoginController">
    <children>
-      <AnchorPane maxHeight="1080.0" maxWidth="1920.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: black;">
+      <VBox alignment="CENTER" prefHeight="1080.0" prefWidth="1920.0">
          <children>
-            <VBox alignment="CENTER" prefHeight="1080.0" prefWidth="1920.0">
+            <ImageView fx:id="imgLoginLogo" fitHeight="265.0" fitWidth="292.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../resources/images/logo/logo.png" />
+               </image>
+            </ImageView>
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
                <children>
-                  <ImageView fx:id="imgLoginLogo" fitHeight="265.0" fitWidth="292.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../resources/images/logo/logo.png" />
-                     </image>
-                  </ImageView>
-                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
-                     <children>
-                        <TextField fx:id="txtLoginUser" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="63.0" prefWidth="573.0" promptText="Usuario/Email" style="-fx-background-radius: 12;">
-                           <font>
-                              <Font name="Corbel Light" size="24.0" />
-                           </font>
-                        </TextField>
-                        <PasswordField fx:id="txtLoginPassword" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="63.0" prefWidth="573.0" promptText="Password" style="-fx-background-radius: 12;">
-                           <font>
-                              <Font name="Corbel Light" size="24.0" />
-                           </font>
-                        </PasswordField>
-                     </children>
-                  </VBox>
-                  <GridPane alignment="CENTER">
-                    <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <children>
-                        <CheckBox fx:id="cbLoginRememberMe" alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" onAction="#cbRememberMeSelected" text="Recordar" textFill="WHITE" GridPane.columnIndex="5">
-                           <font>
-                              <Font size="16.0" />
-                           </font>
-                        </CheckBox>
-                     </children>
-                  </GridPane>
-                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="5.0">
-                     <children>
-                        <Button fx:id="btnLoginEnter" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnLoginEnterPressed" prefHeight="40.0" prefWidth="240.0" style="-fx-border-radius: 12;" text="Entrar" />
-                        <Button fx:id="btnLoginRegister" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#btnLoginRegisterPressed" prefHeight="40.0" prefWidth="240.0" style="-fx-border-radius: 12;" text="Registrarse" />
-                     </children>
-                  </VBox>
+                  <TextField fx:id="txtLoginUser" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="63.0" prefWidth="573.0" promptText="Usuario/Email" style="-fx-background-radius: 12;">
+                     <font>
+                        <Font name="Corbel Light" size="24.0" />
+                     </font>
+                  </TextField>
+                  <PasswordField fx:id="txtLoginPassword" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="63.0" prefWidth="573.0" promptText="Password" style="-fx-background-radius: 12;">
+                     <font>
+                        <Font name="Corbel Light" size="24.0" />
+                     </font>
+                  </PasswordField>
+               </children>
+            </VBox>
+            <GridPane alignment="CENTER">
+              <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <CheckBox fx:id="cbLoginRememberMe" alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" onAction="#cbRememberMeSelected" text="Recordar" textFill="WHITE" GridPane.columnIndex="5">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </CheckBox>
+               </children>
+            </GridPane>
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="5.0">
+               <children>
+                  <Button fx:id="btnLoginEnter" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnLoginEnterPressed" prefHeight="40.0" prefWidth="240.0" style="-fx-border-radius: 12;" text="Entrar" />
+                  <Button fx:id="btnLoginRegister" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#btnLoginRegisterPressed" prefHeight="40.0" prefWidth="240.0" style="-fx-border-radius: 12;" text="Registrarse" />
                </children>
             </VBox>
          </children>
-      </AnchorPane>
+      </VBox>
    </children>
-</GridPane>
+</AnchorPane>
