--- a/src/main/java/view/PantallaRegistro.fxml
+++ b/src/main/java/view/PantallaRegistro.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -15,51 +14,46 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="982.0" minWidth="1512.0" prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PantallaRegistroController">
+<GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="982.0" minWidth="1512.0" prefHeight="982.0" prefWidth="1512.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PantallaRegistroController">
+  <columnConstraints>
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" prefWidth="500.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="100.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="220.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="1.7976931348623157E308" valignment="CENTER" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="300.0" vgrow="SOMETIMES" />
+  </rowConstraints>
    <children>
-      <GridPane layoutY="11.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1064.0" prefWidth="1900.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <ImageView fx:id="imgLoginLogo" fitHeight="265.0" fitWidth="292.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../resources/images/logo/logo.png" />
-               </image>
-               <GridPane.margin>
-                  <Insets left="20.0" top="20.0" />
-               </GridPane.margin>
-            </ImageView>
-            <Label fx:id="lblEresNuevoPorAqui" text="¿Eres nuevo por aquí?" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
-               <font>
-                  <Font size="34.0" />
-               </font>
-            </Label>
-         </children>
-      </GridPane>
-      <VBox alignment="CENTER_RIGHT" layoutX="475.0" layoutY="327.0" prefWidth="795.0" spacing="60.0">
+      <ImageView fx:id="imgLoginLogo" fitHeight="220.0" fitWidth="220.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../resources/images/logo/logo.png" />
+         </image>
+         <GridPane.margin>
+            <Insets left="15.0" top="15.0" />
+         </GridPane.margin>
+      </ImageView>
+      <Label fx:id="lblEresNuevoPorAqui" alignment="CENTER" contentDisplay="CENTER" minWidth="-Infinity" prefWidth="600.0" text="¿Eres nuevo por aquí?" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
+         <font>
+            <Font size="34.0" />
+         </font>
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
+      </Label>
+      <VBox alignment="CENTER_RIGHT" prefWidth="795.0" spacing="60.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
          <children>
             <VBox alignment="TOP_RIGHT" spacing="15.0">
                <children>
                   <HBox alignment="CENTER_RIGHT" spacing="20.0">
                      <children>
-                        <Label fx:id="lblUsuario" text="Usuario:" textFill="WHITE">
+                        <Label fx:id="lblUsuario" alignment="CENTER_RIGHT" minWidth="-Infinity" prefWidth="220.0" text="Usuario:" textFill="WHITE">
                            <font>
                               <Font size="24.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="txtUserName" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="63.0" prefWidth="573.0" style="-fx-background-radius: 12;">
+                        <TextField fx:id="txtUserName" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="520.0" style="-fx-background-radius: 12;">
                            <font>
                               <Font name="Corbel Light" size="24.0" />
                            </font>
@@ -68,12 +62,12 @@
                   </HBox>
                   <HBox alignment="CENTER_RIGHT" spacing="20.0">
                      <children>
-                        <Label fx:id="lblEmail" text="Correo electrónico:" textFill="WHITE">
+                        <Label fx:id="lblEmail" alignment="CENTER_RIGHT" minWidth="-Infinity" prefWidth="220.0" text="Correo electrónico:" textFill="WHITE">
                            <font>
                               <Font size="24.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="txtEmail" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="63.0" prefWidth="573.0" style="-fx-background-radius: 12;">
+                        <TextField fx:id="txtEmail" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="520.0" style="-fx-background-radius: 12;">
                            <font>
                               <Font name="Corbel Light" size="24.0" />
                            </font>
@@ -81,42 +75,57 @@
                      </children>
                   </HBox>
                </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
             </VBox>
             <VBox spacing="15.0">
                <children>
                   <HBox alignment="CENTER_RIGHT" spacing="20.0">
                      <children>
-                        <Label fx:id="lblPassword" text="Contraseña:" textFill="WHITE">
+                        <Label fx:id="lblPassword" alignment="CENTER_RIGHT" minWidth="-Infinity" prefWidth="220.0" text="Contraseña:" textFill="WHITE">
                            <font>
                               <Font size="24.0" />
                            </font>
                         </Label>
-                        <PasswordField fx:id="txtPassword" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="63.0" prefWidth="573.0" style="-fx-background-radius: 12;" />
+                        <PasswordField fx:id="txtPassword" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="520.0" style="-fx-background-radius: 12;" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER_RIGHT" spacing="20.0">
                      <children>
-                        <Label fx:id="lblPasswordRepeat" text="Repita contraseña:" textFill="WHITE">
+                        <Label fx:id="lblPasswordRepeat" alignment="CENTER_RIGHT" contentDisplay="CENTER" minWidth="-Infinity" prefWidth="220.0" text="Repita contraseña:" textAlignment="RIGHT" textFill="WHITE">
                            <font>
                               <Font size="24.0" />
                            </font>
                         </Label>
-                        <PasswordField fx:id="txtPasswordRepeat" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="63.0" prefWidth="573.0" style="-fx-background-radius: 12;" />
+                        <PasswordField fx:id="txtPasswordRepeat" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="520.0" style="-fx-background-radius: 12;" />
                      </children>
                   </HBox>
                </children>
             </VBox>
          </children>
+         <GridPane.margin>
+            <Insets bottom="40.0" right="220.0" top="40.0" />
+         </GridPane.margin>
       </VBox>
-      <HBox alignment="CENTER" layoutY="782.0" prefHeight="299.0" prefWidth="1920.0">
+      <HBox alignment="CENTER" prefHeight="299.0" prefWidth="1920.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <children>
-            <VBox spacing="5.0">
+            <VBox prefWidth="240.0" spacing="10.0">
                <children>
                   <Button fx:id="btnLoginRegister" alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnRegisterNewUserPressed" prefHeight="40.0" prefWidth="240.0" style="-fx-border-radius: 12;" text="Crear nuevo usuario" textAlignment="CENTER" />
                   <Button fx:id="btnVolver" alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnVolver" prefHeight="40.0" prefWidth="240.0" style="-fx-border-radius: 12;" text="¿Ya tienes cuenta?" textAlignment="CENTER" />
                </children>
+               <padding>
+                  <Insets top="30.0" />
+               </padding>
             </VBox>
          </children>
+         <opaqueInsets>
+            <Insets top="10.0" />
+         </opaqueInsets>
       </HBox>
    </children>
-</AnchorPane>
+   <padding>
+      <Insets left="10.0" top="10.0" />
+   </padding>
+</GridPane>
