--- a/src/main/resources/view/PantallaModelo.fxml
+++ b/src/main/resources/view/PantallaModelo.fxml
@@ -159,7 +159,7 @@
    <center>
       <Pane fx:id="centralPane" style="-fx-background-color: #E9E9E9;" BorderPane.alignment="CENTER">
          <children>
-            <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="878.0" prefWidth="1263.0" />
+            <Pane fx:id="paneContent" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="878.0" prefWidth="1263.0" />
          </children></Pane>
    </center>
 </BorderPane>
