--- a/src/main/resources/view/PanePelicula.fxml
+++ b/src/main/resources/view/PanePelicula.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.Avatar?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -15,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PanePelicula">
+<AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PanePeliculaController">
    <children>
       <Pane prefHeight="878.0" prefWidth="1263.0">
          <children>
@@ -69,11 +68,11 @@
                                                 </Label>
                                                 <HBox prefHeight="23.0" prefWidth="100.0">
                                                    <children>
-                                                      <Pane prefHeight="12.0" prefWidth="40.0" style="-fx-background-color: #CFCFCF; -fx-background-radius: 4;">
+                                                      <Pane prefHeight="51.0" prefWidth="41.0" style="-fx-background-color: #CFCFCF; -fx-background-radius: 4;">
                                                          <children>
-                                                            <Label fx:id="lbluserRating" alignment="CENTER" contentDisplay="CENTER" layoutX="4.0" layoutY="2.0" onDragDetected="#userRatingPressed" prefHeight="20.0" prefWidth="30.0" text="8.5" textAlignment="CENTER" textFill="#ec1b1b">
+                                                            <Label fx:id="lbluserRating" alignment="CENTER" contentDisplay="CENTER" layoutX="4.0" layoutY="2.0" onDragDetected="#userRatingPressed" prefHeight="25.0" prefWidth="30.0" text="8.5" textAlignment="CENTER" textFill="#ec1b1b">
                                                                <font>
-                                                                  <Font name="System Bold" size="14.0" />
+                                                                  <Font name="System Bold" size="18.0" />
                                                                </font>
                                                             </Label>
                                                          </children>
@@ -84,7 +83,7 @@
                                                             <Insets bottom="1.0" top="1.0" />
                                                          </padding>
                                                       </Pane>
-                                                      <ImageView fitHeight="25.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                                      <ImageView fitHeight="30.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                                                          <HBox.margin>
                                                             <Insets left="10.0" right="10.0" />
                                                          </HBox.margin>
@@ -92,11 +91,36 @@
                                                             <Image url="@../images/flags/japon.png" />
                                                          </image>
                                                       </ImageView>
-                                                      <Label fx:id="lblEstrenoDuracion" contentDisplay="CENTER" prefHeight="25.0" prefWidth="85.0" text="2001 · 2h 5m" textFill="WHITE">
+                                                      <Label fx:id="lblEstrenoDuracion" prefHeight="25.0" prefWidth="174.0" text="2001 · 2h 5m" textFill="WHITE">
                                                          <font>
-                                                            <Font name="System Bold" size="14.0" />
+                                                            <Font name="System Bold" size="16.0" />
                                                          </font>
                                                       </Label>
+                                                   </children>
+                                                </HBox>
+                                                <ImageView fx:id="imgLike" fitHeight="50.0" fitWidth="50.0" onDragDetected="#imgLikePressed" pickOnBounds="true" preserveRatio="true">
+                                                   <VBox.margin>
+                                                      <Insets left="20.0" top="40.0" />
+                                                   </VBox.margin>
+                                                   <image>
+                                                      <Image url="@../images/others/likeUnselected.png" />
+                                                   </image>
+                                                </ImageView>
+                                                <HBox prefHeight="100.0" prefWidth="200.0">
+                                                   <VBox.margin>
+                                                      <Insets top="20.0" />
+                                                   </VBox.margin>
+                                                   <children>
+                                                      <ImageView fx:id="imgNetflix" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+                                                         <HBox.margin>
+                                                            <Insets right="8.0" />
+                                                         </HBox.margin>
+                                                      </ImageView>
+                                                      <ImageView fx:id="imgHBO" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
+                                                      <ImageView fx:id="imgDisney" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
+                                                      <ImageView fx:id="imgPrimeVideo" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
+                                                      <ImageView fx:id="imgFilmin" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
+                                                      <ImageView fx:id="imgAppleTV" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
                                                    </children>
                                                 </HBox>
                                              </children>
@@ -183,14 +207,11 @@
                                           </Label>
                                           <HBox fx:id="elementReparto1" alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="200.0">
                                              <children>
-                                                <Avatar fx:id="imgReparto1" radius="30.0">
-                                                   <opaqueInsets>
-                                                      <Insets />
-                                                   </opaqueInsets>
+                                                <ImageView fx:id="imgReparto1" fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
                                                    <HBox.margin>
                                                       <Insets right="15.0" />
                                                    </HBox.margin>
-                                                </Avatar>
+                                                </ImageView>
                                                 <Label fx:id="lblReparto1" text="ActorActriz" textFill="WHITE">
                                                    <font>
                                                       <Font name="System Bold" size="16.0" />
@@ -203,14 +224,11 @@
                                           </HBox>
                                           <HBox fx:id="boxReparto1" alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="200.0">
                                              <children>
-                                                <Avatar fx:id="imgReparto2" radius="30.0">
-                                                   <opaqueInsets>
-                                                      <Insets />
-                                                   </opaqueInsets>
+                                                <ImageView fx:id="imgReparto2" fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
                                                    <HBox.margin>
                                                       <Insets right="15.0" />
                                                    </HBox.margin>
-                                                </Avatar>
+                                                </ImageView>
                                                 <Label fx:id="lblReparto2" text="ActorActriz" textFill="WHITE">
                                                    <font>
                                                       <Font name="System Bold" size="16.0" />
@@ -223,15 +241,29 @@
                                           </HBox>
                                           <HBox fx:id="boxReparto11" alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="200.0">
                                              <children>
-                                                <Avatar fx:id="imgReparto21" radius="30.0">
-                                                   <opaqueInsets>
-                                                      <Insets />
-                                                   </opaqueInsets>
+                                                <ImageView fx:id="imgReparto4" fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
                                                    <HBox.margin>
                                                       <Insets right="15.0" />
                                                    </HBox.margin>
-                                                </Avatar>
+                                                </ImageView>
                                                 <Label fx:id="lblReparto21" text="ActorActriz" textFill="WHITE">
+                                                   <font>
+                                                      <Font name="System Bold" size="16.0" />
+                                                   </font>
+                                                </Label>
+                                             </children>
+                                             <padding>
+                                                <Insets bottom="10.0" />
+                                             </padding>
+                                          </HBox>
+                                          <HBox fx:id="boxReparto111" alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="200.0">
+                                             <children>
+                                                <ImageView fx:id="imgReparto4" fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
+                                                   <HBox.margin>
+                                                      <Insets right="15.0" />
+                                                   </HBox.margin>
+                                                </ImageView>
+                                                <Label fx:id="lblReparto4" text="ActorActriz" textFill="WHITE">
                                                    <font>
                                                       <Font name="System Bold" size="16.0" />
                                                    </font>
@@ -255,7 +287,7 @@
                                           <Font name="System Bold" size="22.0" />
                                        </font>
                                        <VBox.margin>
-                                          <Insets bottom="10.0" top="10.0" />
+                                          <Insets bottom="10.0" top="20.0" />
                                        </VBox.margin>
                                     </Label>
                                     <Label fx:id="lblSinopsis" alignment="TOP_LEFT" text="Ejemplo texto sinopsis" textFill="WHITE">
